# Chess_Test

./: CMakeLists.txt  README.md
resources/: map.map
src/: CApp.cpp  CApp.h  LBishop.cpp  LBishop.h  LBoardPVAI.cpp  LBoardPVAI.h  LBoardPVP.cpp  LBoardPVP.h  LButton.cpp  LButton.h  LKing.cpp  LKing.h  LKnight.cpp  LKnight.h  LMenuSettings.cpp  LMenuSettings.h  LPawn.cpp  LPawn.h  LPiece.cpp  LPiece.h  LQueen.cpp  LQueen.h  LRook.cpp  LRook.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  LWindow.cpp  LWindow.h  check.cpp  check.h  constantes.h  funct.cpp  funct_headers.h  headers.h  main.cpp  playPVAI.cpp  playPVAI.h  playPVP.cpp  (+3 more)
